# hello-world

./: .gitignore  README.md  demo.ipynb  fuel_estimator.html  index.html  pyproject.toml  search.js
.github/workflows/: docs.yml  publish.yml  test.yml
src/fuel_estimator/: __init__.py  core.py
tests/: test_core.py
