[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world-Przemek-Bukala"
dynamic = ["version"]
description = "Fuel Consumption Estimator using Numba and Pint"
authors = [{name = "Przemysław Bukała", email = "pbukala@student.agh.edu.pl"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "numba>=0.58.0",
    "pint>=0.23",
]

[project.optional-dependencies]
test = ["pytest>=7.0","pytest-cov"]
docs = ["pdoc>=14.0"]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/Przemekbukala/hello-world"
Repository = "https://github.com/Przemekbukala/hello-world"